Minor improvements to UI/UX

--- a/cv/index.html
+++ b/cv/index.html
@@ -112,15 +112,13 @@
               <div class="col-lg-6 col-md-12">
                 <div class="card-body">
                   <div class="h4 mt-0 title">About</div>
-                  <p>Hello! I am Aryan Ebrahimpour. Software Engineer and Designer.</p>
+                  <p>Hello! My name is Aryan Ebrahimpour. I am a Software Engineer and Designer.</p>
                   <p>
-                    I began programming in middle school and ever since then I have been interested in this field. I've
-                    started developing
-                    applications and writing articles in my weblog. I read software and hardware articles and follow
-                    Programming
-                    languages and technologies documentation to improve my programming and algorithm design skills. I
-                    always
-                    strive to become a better software engineer and I will never stop.
+                    I began programming in middle school and since then my interest has become an obsession. 
+                    I develop applications and write articles in my weblog,
+                    I read software and hardware articles, and I follow Programming language and 
+                    technology documentation to improve my programming and algorithm design skills. I
+                    constantly strive to become a better software engineer.
                   </p>
                 </div>
               </div>
@@ -196,7 +194,7 @@
                         <div class="card-body no-margin">
                           <div class="card-inner-section">Summary</div>
                           <div class="card-inner-content">
-                              I know almost all C# language features like:
+                              I know almost all C# language features such as:
                               <ul>
                                 <li>All C# Keywords and Preprocessor Directives</li>
                                 <li>Delegates, Event system</li>
@@ -211,11 +209,11 @@
                                 <li>Functional Features and Lambda Expressions</li>
                                 <li>C# and .NET coding conventions</li>
                                 <li>Socket Programming, Networking, MultiThreading...</li>
-                                <li>And many more...</li>
+                                <li>And much more...</li>
                               </ul>
-                              I have more than 3 years of professional experience in C# and .NET, worked on lots of Desktop
-                              projects. Also have experience
-                              in Web Development, Game Programming and IoT development with C#.
+                              I have more than 3 years of professional experience in C# and .NET. I work on lots of Desktop
+                              projects and I have experience
+                              in Web Development, Game Programming, and IoT development with C#.
                             </div>
                           <div class="card-inner-section">Related Tags</div>
                           <div class="card-inner-content">
@@ -250,7 +248,7 @@
                         <div class="card-body no-margin">
                           <div class="card-inner-section">Summary</div>
                           <div class="card-inner-content">
-                              WPF and UWP are my UI frameworks of choice. Almost all my desktop projects are written with
+                              WPF and UWP are my UI frameworks of choice. Almost all of my desktop projects are written with
                               these frameworks<br>
                               I'm skilled at:
                               <ul>
@@ -454,7 +452,7 @@
                         <div class="card-body no-margin">
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
-                                I'm experienced in CSS 3 and its features like keyframe animations, effects, etc.
+                                I'm experienced in CSS 3 and many of its features such as keyframe animations, effects, etc.
                             </div>
                             <div class="card-inner-section">Related Tags</div>
                             <div class="card-inner-content">
@@ -528,7 +526,7 @@
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
                                 ASP.NET MVC Core + Entity Framework = Monster<br />
-                                I've watched a fully professional video tutorial for ASP.NET MVC and done some projects with
+                                I've watched a fully professional video tutorial for ASP.NET MVC and I've done various projects with
                                 it.
                                 ASP.NET is currently the only web framework that I'm experienced in. <br />
                             </div>
@@ -598,7 +596,7 @@
                             <div class="card-inner-content">
                                 I can create Plug-ins for Microsoft Office products. I've already created an extension for
                           Microsoft Excell that can
-                          modify a sheet for easier question importing for Moodle. This project was a part of Sabnaa
+                          modify a sheet for easier question importing for Moodle. This project was a part of my Sabnaa
                           project.
                             </div>
                         </div>
@@ -624,7 +622,7 @@
                         <div class="card-body no-margin">
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
-                                I'm familiar with Python. I don't know much about its libraries yet.
+                                I'm familiar with Python, but I don't know much about its libraries yet.
                             </div>
                             <div class="card-inner-section">Related Tags</div>
                             <div class="card-inner-content">
@@ -752,8 +750,8 @@
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
                                  I've written a <a href="https://0xaryan.github.io/Guilan-Web-Tools/" target="_blank">Web
-                            Extension for Guilan University</a> students with JS. In that project, I got to know with
-                          some of WebExtension APIs.
+                            Extension for Guilan University</a> students with JS. In that project, I was able to get familiar with
+                          some WebExtension APIs.
                             </div>
                             <div class="card-inner-section">Related Tags</div>
                             <div class="card-inner-content">
@@ -783,7 +781,7 @@
                         <div class="card-body no-margin">
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
-                                I am a big fan of Electronics and DIY. I've done the final project of my university's CAD
+                                I am a big fan of Electronics and DIY. I worked on the final project of my university's CAD
                           course with Windows IoT core + Xamarin + VHDL. A great
                           blend! The result was a <a target="_blank" href="https://github.com/0xaryan/PingPongGame_CAD_VGA">ping
                             pong game</a> that can be controlled with a smartphone, sending data to a RaspberryPi with
@@ -819,7 +817,7 @@
                         <div class="card-body no-margin">
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
-                                As I mentioned in IoT section, I've written a complete <a target="_blank" href="https://github.com/0xaryan/PingPongGame_CAD_VGA">ping-pong
+                                As I mentioned in the IoT section, I've written a complete <a target="_blank" href="https://github.com/0xaryan/PingPongGame_CAD_VGA">ping-pong
                             game in VHDL</a>, with help of other technologies like Xamarin, Windows IoT core, and
                           RaspberryPi.
                             </div>
@@ -851,9 +849,9 @@
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
                                 I'm experienced in Threading, Socket Programming and Desktop Programming with Java (JavaFX).
-                          Almost in all of our university projects, we were forced to use Java, therefore all my AI
+                          In almost all of my university projects I was forced to use Java, so ergo all of my AI
                           projects, PL design projects and Advanced Programming course projects are written in Java.
-                          I'm not a fan of it though!
+                          I'm not a fan of it!
                             </div>
                             <div class="card-inner-section">Related Tags</div>
                             <div class="card-inner-content">
@@ -933,7 +931,7 @@
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
                                 Creating charming user interfaces has always been a hobby for me. I love blending art with
-                          Computers!
+                          computers!
                             </div>
                          
                           
@@ -958,7 +956,7 @@
                         <div class="card-body no-margin">
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
-                                Design and make use of better algorithms in factors like time and space were always my
+                                Design and making use of better algorithms with factors like time and space has always been of my
                           concern.
                           I always try to learn and use better algorithms when possible.
                             </div>
@@ -1012,7 +1010,7 @@
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
                                 Linux is a great operating system with a great community and an open door to the free world.
-                          Although my primary operating system is Windows, I still use WSL and bash on Windows.
+                          Although my primary operating system is Windows, I still use WSL and Bash on Windows.
                             </div>
                         </div>
                       </div>
@@ -1037,7 +1035,7 @@
                         <div class="card-body no-margin">
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
-                                I know how to use WinAPI to create Shell Extensions for windows.
+                                I know how to use WinAPI to create Shell Extensions for Windows.
                             </div>
                         </div>
                       </div>
@@ -1060,7 +1058,7 @@
                         <div class="card-body no-margin">
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
-                                I'm not a professional designer, but I know how to use tools like Photoshop to
+                                I'm not a professional designer, but I know how to use tools such as Photoshop in order to
                           fix some of my needs.
                             </div>
                         </div>
@@ -1136,8 +1134,8 @@
                             <div class="card-inner-content">
                                                           Visual Studio is a great tool for developing software. It has a lot of features that you can
                           use to refactor your code or debug your application in a faster way. I'm also familiar with
-                          Visual Studio Blend and
-                          it's great XAML designer.
+                          Visual Studio Blend and I believe that
+                          it's a great XAML designer.
                             </div>
                             <div class="card-inner-section">Related Tags</div>
                             <div class="card-inner-content">
@@ -1166,7 +1164,7 @@
                         <div class="card-body no-margin">
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
-                                I'm familiar with some of the network tools like Wireshark, GNS3 and Cisco Packet Tracer.
+                                I'm familiar with some network tools such as Wireshark, GNS3 and Cisco Packet Tracer.
                             </div>
                         </div>
                       </div>
@@ -1203,8 +1201,8 @@
                             <div class="card-inner-section">Summary</div>
                             <div class="card-inner-content">
                                 I can give presentations about different topics. Here is <a href="https://github.com/0xaryan/Presentation"
-                            target="_blank">a list of Documents and Slides</a> that I've created overtime and
-                          pressented about.
+                            target="_blank">a list of Documents and Slides</a> that I've created over time and have
+                          presented about.
                             </div>
                         </div>
                       </div>
@@ -1306,7 +1304,7 @@
                       <div id="collapse-persian-poetry" class="collapse" aria-labelledby="heading-persian-poetry"
                         data-parent="#accordion-persian-poetry">
                         <div class="card-body">
-                          I can write Hafez-style classic peoms in persian.
+                          I can write Hafez-style classic poems in Persian.
                         </div>
                       </div>
                     </div>
@@ -1350,7 +1348,7 @@
                             <img src="images/EyesGuard.jpg" alt="Image" />
                             <figcaption>
                               <div class="h4">Eyes Guard</div>
-                              <p>Windows Application for protecting your eyes </p>
+                              <p>Windows Application for protecting your eyes</p>
                             </figcaption>
                           </figure>
                         </a>
@@ -1382,8 +1380,8 @@
                           <figure class="cc-effect">
                             <img src="images/project-7.jpg" alt="Image" />
                             <figcaption>
-                              <div class="h4">Guilan Data Structure</div>
-                              <p>All projects of Data Structure course of Guilan University in an integrated GUI
+                              <div class="h4">Guilan Data Structure Course</div>
+                              <p>All projects of my Data Structure course at Guilan University in an integrated GUI
                                 application</p>
                             </figcaption>
                           </figure>
@@ -1535,9 +1533,9 @@
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Freelancer</div>
-                    <p> As I am a student in a university far from city center, I can't work in a company, but instead
+                    <p> Because I am a student in a university far from a city, I can't work in a company, but instead
                       I
-                      work as freelancer and do projects time to time. I build desktop and web applications right now.
+                      work as freelancer and do sid projects in my spare time. I build desktop and web applications right now.
                     </p>
                   </div>
                 </div>
@@ -1603,10 +1601,9 @@
                     <div class="h5">Bachelor of Computer Engineering</div>
                     <p class="category">Guilan University</p>
                     <p>
-                      In Guilan University, I've started to convey other students my knowledge about programming and
-                      web design from the beginning
-                      of entering university. After that, I've become a member of the academic forum and participated
-                      in
+                      At Guilan University, I began to show other students my knowledge about programming and
+                      web design. After that, I became a member of the academic forum and participated
+                      in an
                       ACM programming contest with the result of honorable mention. I had in-class <a href="https://github.com/0xaryan/Presentation"
                         target="_blank">presentations</a>
                       about Agile software methodologies, DevOps, Refactoring and Bad smells in code, the difference
