Made changes according to requested changes.

--- a/cv/index.html
+++ b/cv/index.html
@@ -596,7 +596,7 @@
                             <div class="card-inner-content">
                                 I can create Plug-ins for Microsoft Office products. I've already created an extension for
                           Microsoft Excell that can
-                          modify a sheet for easier question importing for Moodle. This project was a part of my Sabnaa
+                          modify a sheet for easier question importing for Moodle. This project was a part of the Sabnaa
                           project.
                             </div>
                         </div>
@@ -851,7 +851,7 @@
                                 I'm experienced in Threading, Socket Programming and Desktop Programming with Java (JavaFX).
                           In almost all of my university projects I was forced to use Java, so ergo all of my AI
                           projects, PL design projects and Advanced Programming course projects are written in Java.
-                          I'm not a fan of it!
+                          I'm not a fan of it though!
                             </div>
                             <div class="card-inner-section">Related Tags</div>
                             <div class="card-inner-content">
@@ -1134,8 +1134,8 @@
                             <div class="card-inner-content">
                                                           Visual Studio is a great tool for developing software. It has a lot of features that you can
                           use to refactor your code or debug your application in a faster way. I'm also familiar with
-                          Visual Studio Blend and I believe that
-                          it's a great XAML designer.
+                          Visual Studio Blend and
+                          its great XAML designer.
                             </div>
                             <div class="card-inner-section">Related Tags</div>
                             <div class="card-inner-content">
@@ -1535,7 +1535,7 @@
                     <div class="h5">Freelancer</div>
                     <p> Because I am a student in a university far from a city, I can't work in a company, but instead
                       I
-                      work as freelancer and do sid projects in my spare time. I build desktop and web applications right now.
+                      work as freelancer and do side projects in my spare time. I build desktop and web applications right now.
                     </p>
                   </div>
                 </div>
