Update warn to avoid bashes

--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@ menu: resume
         </div>
 
         <div class="col-md-12 alert alert-icon alert-success" role="alert">
-                <i class="fe fe-chevrons-up mr-2" aria-hidden="true"></i> Click on chevrons to see more details. 
+                <i class="fe fe-chevrons-up mr-2" aria-hidden="true"></i> <span>Important: Please <b>open the accordions</b> using the chevrons in order to see what I'm skilled at and what I don't.</span>
         </div>
 
         {% include skill-viewer.html title="Programming Skills" area="programming" skill-source=site.data.skills.programming  %}
