Fix for: Simon the Fortnite Skin Manager (and admin of +120 groups) suggestions

--- a/cv/index.html
+++ b/cv/index.html
@@ -152,7 +152,7 @@
                     <div class="col-sm-4">
                       <strong class="text-uppercase">Address:</strong>
                     </div>
-                    <div class="col-sm-8">Room 203, Block 3, Guilan University Dormitory, Rasht, Guilan, Iran</div>
+                    <div class="col-sm-8">Room 203, Block 3, University of Guilan Dormitory, Rasht, Guilan, Iran</div>
                   </div>
                   <div class="row mt-3">
                     <div class="col-sm-4">
@@ -789,7 +789,7 @@
                           <div class="card-inner-section">Summary</div>
                           <div class="card-inner-content">
                             I've written a <a href="https://0xaryan.github.io/Guilan-Web-Tools/" target="_blank">Web
-                              Extension for Guilan University</a> students with JS. In that project, I was able to get
+                              Extension for University of Guilan</a> students with JS. In that project, I was able to get
                             familiar with
                             some WebExtension APIs.
                           </div>
@@ -1449,7 +1449,7 @@
                             <img src="images/project-7.jpg" alt="Image" />
                             <figcaption>
                               <div class="h4">Guilan Data Structure Course</div>
-                              <p>All projects of my Data Structure course at Guilan University in an integrated GUI
+                              <p>All projects of my Data Structure course at University of Guilan in an integrated GUI
                                 application</p>
                             </figcaption>
                           </figure>
@@ -1519,7 +1519,7 @@
                           <figure class="cc-effect">
                             <img src="images/photography-1.jpg" alt="Image" />
                             <figcaption>
-                              <div class="h4">Guilan University</div>
+                              <div class="h4">University of Guilan</div>
                               <p>#Green</p>
                             </figcaption>
                           </figure>
@@ -1678,9 +1678,9 @@
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
                     <div class="h5">Bachelor of Computer Engineering</div>
-                    <p class="category">Guilan University</p>
+                    <p class="category">University of Guilan</p>
                     <p>
-                      At Guilan University, I began to show other students my knowledge about programming and
+                      At University of Guilan, I began to show other students my knowledge about programming and
                       web design. After that, I became a member of the academic forum and participated
                       in an
                       ACM programming contest with the result of honorable mention. I had in-class <a
