--- a/resume.html
+++ b/resume.html
@@ -42,16 +42,16 @@ menu: resume
         </div>
 
         <div class="col-md-12 alert alert-icon alert-success" role="alert">
-                <i class="fe fe-chevrons-up mr-2" aria-hidden="true"></i> <span>Important: Please <b>open the accordions</b> using the chevrons in order to see what I'm skilled at and what I don't.</span>
+                <i class="fe fe-alert-circle mr-2" aria-hidden="true"></i> <span>Please <b>open the description boxes</b> to see more information about the topic.</span>
         </div>
 
-        {% include skill-viewer.html title="Programming Skills" area="programming" skill-source=site.data.skills.programming  %}
+        {% include skill-viewer.html title="Programming Topics" area="programming" skill-source=site.data.skills.programming  %}
 
-        {% include skill-viewer.html title="Career Skills" area="career" skill-source=site.data.skills.career  %}
+        {% include skill-viewer.html title="Career Topics" area="career" skill-source=site.data.skills.career  %}
 
-        {% include skill-viewer.html title="General Skills" area="general" skill-source=site.data.skills.general  %}
+        {% include skill-viewer.html title="General Topics" area="general" skill-source=site.data.skills.general  %}
 
-        {% include skill-viewer.html title="Language Skills" area="language" skill-source=site.data.skills.language  %}
+        {% include skill-viewer.html title="Languages" area="language" skill-source=site.data.skills.language  %}
 
         {% include work-xp-viewer.html  %}
 
