--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,9 @@ menu: me
 			{% include cards/profile-contact.html %}
 		</div>
 		<div class="col-lg-8">
-			{% include cards/card.html title="Aryan Ebrahimpour" content="Hi, My name is Aryan Ebrahimpour. This page currently doesn't have content, but you can use Resume section for more info. Best regards." %}
+			{% capture profile_raw %}{% include aryan/profile.md %}{% endcapture %}
+			{% assign profile_md = profile_raw | markdownify %}
+			{% include cards/card.html title="Aryan Ebrahimpour" content=profile_md %}
 		</div>
 	</div>
 </div>
