--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: 0xaryan's Blog
+title: Home
 menu: index
 ---
 
 <div class="container">
 
-	{% include page-title.html title="Latest Blog Posts" %}
+	{% include page-title.html title="Aryan Ebrahimpour — Personal Website" %}
 
 	<div class="row row-cards row-deck">
 		{% for article in site.posts %}
@@ -14,6 +14,5 @@ menu: index
 			{% include cards/blog-single.html article=article type="aside" aside-class="w-50" truncate=200 %}
 		</div>
 		{% endfor %}
-
 	</div>
 </div>
