Change blog titles

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Home
+title: Blog
 menu: index
 ---
 
 <div class="container">
 
-	{% include page-title.html title="Aryan Ebrahimpour — Personal Website" %}
+	{% include page-title.html title="Blog" %}
 
 	<div class="row row-cards row-deck">
 		{% for article in site.posts %}
@@ -15,4 +15,5 @@ menu: index
 		</div>
 		{% endfor %}
 	</div>
+	
 </div>
