--- a/presentations.html
+++ b/presentations.html
@@ -10,7 +10,7 @@ menu: presentations
 				<h1 class="page-title">Presentations</h1>
 				<div class="page-description">
 					<ul class="list-inline list-inline-dots m-0">
-						<li class="list-inline-item">A list of the docs and slides that I've created</li>
+						<li class="list-inline-item">A list of the docs and slides that I've created and presented</li>
 					</ul>
 				</div>
 			</div>
