--- a/presentations.html
+++ b/presentations.html
@@ -11,6 +11,9 @@ menu: presentations
 				<div class="page-description">
 					<ul class="list-inline list-inline-dots m-0">
 						<li class="list-inline-item">A list of the docs and slides that I've created and presented</li>
+						<li class="list-inline-item">
+							<a target="_blank" href="https://github.com/0xaryan/Presentation">View in GitHub</a>
+						</li>
 					</ul>
 				</div>
 			</div>
