--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,9 @@ menu: resume
                     <li class="list-inline-item">Aryan Ebrahimpour</li>
                     <li class="list-inline-item">Software Engineer</li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="/aryan_data/cv.pdf">Download Resume as PDF</a>
+                        <a target="_blank" href="/aryan_data/cv.pdf">
+                            <i class="fa fa-file-pdf-o"></i> Download Resume as PDF
+                        </a>
                     </li>
                     <li class="list-inline-item">
                         <a target="_blank" href="/aryan_data/University Grades.pdf">View University Grades as PDF</a>
