--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@ menu: index
 	<div class="row row-cards row-deck">
 		{% for article in site.posts %}
 		<div class="col-md-12">
-			{% include cards/blog-single.html article=article type="aside" aside-class="w-50" truncate=200 %}
+			{% include cards/blog-index.html article=article type="aside" aside-class="w-50" truncate=200 %}
 		</div>
 		{% endfor %}
 	</div>
 	
+	<h4>Posts published in other websites</h4>
+
+	<div class="row row-cards row-deck">
+		{% for article in site.data.foreign-posts %}
+		<div class="col-md-12">
+			{% include cards/blog-index-foreign.html article=article type="aside" aside-class="w-50" truncate=200 %}
+		</div>
+		{% endfor %}
+	</div>
+
 </div>
