Add support buttons

--- a/opensource.html
+++ b/opensource.html
@@ -50,7 +50,10 @@ menu: opensource
                         </div>
                     </div>
                 </div>
-            </div>
+			</div>
+			<div class="text-center">
+					<script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#46b798', 'P5P011XLE');kofiwidget2.draw();</script>
+			</div>
         </div>
         <div class="col-lg-8">
             <div class="card">
@@ -59,7 +62,7 @@ menu: opensource
                     <div class="card-options">
                         <a href="#" class="card-options-fullscreen" data-toggle="card-fullscreen"><i
                                 class="fe fe-maximize"></i></a>
-         
+
                     </div>
                 </div>
                 <div class="card-alert alert alert-success mb-0">
@@ -79,7 +82,7 @@ menu: opensource
                             </tr>
                         </thead>
                         <tbody id="gh-repo-container">
-                           
+
                         </tbody>
                     </table>
                 </div>
