--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,14 @@ menu: me
 <div class="container">
 	<div class="row">
 		<div class="col-lg-4">
-			{% include cards/profile.html %}
+			<div class="row">
+				<div class="col-lg-12">
+					{% include cards/profile.html %}
+				</div>
+				<div class="col-lg-12 text-center">
+						<script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#46b798', 'P5P011XLE');kofiwidget2.draw();</script>
+				</div>
+			</div>
 		</div>
 		<div class="col-lg-8">
 			<div class="row">
