--- a/opensource.html
+++ b/opensource.html
@@ -91,4 +91,4 @@ menu: opensource
     </div>
 </div>
 
-<script src="/assets/js/github.js"></script>
+<script src="/assets/js/github.js?nocache=1adea63c-69f4-4070-b5c4-38fef55148df"></script>
