Add loading row in open-source page

--- a/opensource.html
+++ b/opensource.html
@@ -82,7 +82,12 @@ menu: opensource
                             </tr>
                         </thead>
                         <tbody id="gh-repo-container">
-
+                            <tr id="gh-loading-row">
+                                <td colspan="10">
+                                    <div><span>Loading...</span></div>
+                                    <div class="small text-muted">Fetching data from GitHub...</div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -91,4 +96,4 @@ menu: opensource
     </div>
 </div>
 
-<script src="/assets/js/github.js?nocache=1adea63c-69f4-4070-b5c4-38fef55148df"></script>
+<script src="/assets/js/github.js?nocache=e12248f3-599d-45ad-98aa-0f788c0e330b"></script>
