--- a/resume.html
+++ b/resume.html
@@ -56,6 +56,7 @@ menu: resume
 
         {% include education-viewer.html  %}
 
+        {% include faq-viewer.html source=site.data.faq.items %}
 
     </div>
 
