--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@ menu: resume
 			</div>
 		</div>
 
-        {% include skill-viewer.html title="Programming Topics" area="programming" skill-source=site.data.skills.programming  %}
+        {% include skill-viewer-by-cat.html title="Programming Topics" area="programming" skill-source=site.data.skills.programming  %}
 
         {% include skill-viewer.html title="Career Topics" area="career" skill-source=site.data.skills.career  %}
 
