--- a/opensource.html
+++ b/opensource.html
@@ -66,7 +66,7 @@ menu: opensource
                     </div>
                 </div>
                 <div class="card-alert alert alert-success mb-0">
-                    Hover on the name of the repo to view description
+                    Hover on the name of the repo to view description. My organization repos are not included.
                 </div>
 
                 <div class="table-responsive">
