--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ menu: contact
         <div class="col-lg-12 col-md-12">
             {% capture other_methods %}
             <a href="https://t.me/Oxaryan" target="_blank"><button type="button" class="btn btn-info"><i class="fa fa-telegram mr-2"></i>Telegram</button></a>
-            <a href="mailto:Oxaryan@outlook.com?subject=Contact Aryan Ebrahimpour"><button type="button" class="btn btn-dark"><i class="fe fe-mail mr-2"></i>Email</button></a>
+            <a href="mailto:me@avestura.dev?subject=Contact Aryan Ebrahimpour"><button type="button" class="btn btn-dark"><i class="fe fe-mail mr-2"></i>Email</button></a>
             {% endcapture %}
             {% include cards/card.html title="Other Methods" content=other_methods %}
         </div>
