Remove uni grades

--- a/resume.html
+++ b/resume.html
@@ -17,9 +17,9 @@ menu: resume
                             <i class="fa fa-file-pdf-o"></i> Download Resume as PDF
                         </a>
                     </li>
-                    <li class="list-inline-item">
+                    <!-- <li class="list-inline-item">
                         <a target="_blank" href="/aryan_data/University Grades.pdf">View University Grades as PDF</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
